Update Home Section

--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -26,14 +26,12 @@
                     </div>
                 </div>
                 </div>
-        
+
                 <div class="column">
-                        <div class=" max-logo r">   
+                        <div class=" max-logo">   
                         <img src="./assets/img/Onspace_wave.png" class="img-fluid"
                             alt="Onspace">
                             </div>
-                   
-
                 </div>
         
             </div>
@@ -51,10 +49,8 @@
 </section>
 
 
-<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br><br>
-
 <section class="services-section">
-
+<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br><br>
     <div>
         <h1 class="text-center">Servicios</h1> <br>
     </div>
@@ -62,75 +58,46 @@
         <div class="card-grid">
             <li class="card-services"  >
                 <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Diseño Gráfico</h3>
+                    style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Marketing Digital</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/2.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Marketing Tradicional</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/3.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Diseño Web</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Diseño Web</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Hosting</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Impresión</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
-            <li class="card-services"  >
-                <div class="card__background"
-                    style="background-image: url(https://astralmoney.com/wp-content/uploads/2020/07/Captura-de-pantalla-2019-05-18-a-las-16.11.59.png)">
-                </div>
-                <div class="card__content">
-                    <h3 class="card__heading text-center">Ambientación de espacios comerciales.</h3>
+            <li class="card-services">
+                <div class="card__background" style="background-image: url(./assets/img/Services-img/1.png)">
                 </div>
             </li>
         </div>
     
     </div>
+
+    <br><br><br><br>
 </section>
 
 
-<br><br>
+
 <section class="ours">
     
 
