--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -34,9 +34,9 @@
 
             <div class="column">
                 <b>
-                <p style="font-size:20px; margin: 15% auto;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
+                <p style="font-size:20px; margin: auto;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
                     porttitor sed morbi laoreet aliquam cras nostra
-                    tincidunt, enim aenean phasellus sapien auctor curae ultrices.</p></b>
+                    tincidunt</p></b>
             </div>
     
         </div>
