--- a/src/app/Shared/footer/footer.component.scss
+++ b/src/app/Shared/footer/footer.component.scss
@@ -72,7 +72,7 @@
 //mini nav
 
 .mini-nav{
-    margin: 30% auto;
+    margin: auto;
     font-size: 25px;
 }
 
@@ -86,10 +86,10 @@ a:active {
 //logo
 
 .max-logo{
-    margin: 30% auto;
+    margin: auto;
 }
 
 img{
-    width: 220px;
-    height: 160px;
+    width: 100%;
+    
 }
