--- a/src/app/Shared/not-found/not-found.component.html
+++ b/src/app/Shared/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<img src="./assets/img/404.png" class="img-fluid not-found" alt="...">
+
+<br><br><br>
+<div class="container">
+<img src="./assets/img/404.png" class=" img-fluid not-found" alt="...">
+</div>
