--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -8,7 +8,7 @@
 
 
 <section class="home-section">
-    <br> <br>
+    <br>
         <div class="wrapper-columns">
         
             <div class="columns">
@@ -22,8 +22,14 @@
                             <div>CRECER</div>
                             <div>INNOVAR</div>
                         </div> <br>
-                        TU MARCA COMO <br> NUNCA ANTES? <br> ¡Hagámoslo!
+                        TU MARCA COMO <br> NUNCA ANTES? <br> <br>
+                        <div class="text-center">
+                            <button class="btn-form text-center"> ¡Hagámoslo!</button>
+                        </div>
+
+                       
                     </div>
+                
                 </div>
                 </div>
 
@@ -50,7 +56,7 @@
 
 
 <section class="services-section">
-<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br><br>
+<br><br> <br><br> <br><br><br> <br> <br><br><br><br> <br><br>
     <div>
         <h1 class="text-center">Servicios</h1> <br>
     </div>
