--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -8,7 +8,7 @@
             <div class="column">
                 <figure class="figure">
                     <div class="max-logo text-center">
-                        <img src="./assets/img/Onspace_name.png"
+                        <img src="./assets/img/Onspace_wave.png"
                             class="figure-img img-fluid rounded"
                             alt="A generic square placeholder image with rounded corners in a figure.">
                     </div>
@@ -34,7 +34,7 @@
 
             <div class="column">
                 <b>
-                <p style="font-size:20px; margin: auto;">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipiscing elit elementum, dictum
                     porttitor sed morbi laoreet aliquam cras nostra
                     tincidunt</p></b>
             </div>
@@ -44,6 +44,6 @@
     </div>
     
 
-   <b> <p class="text-center" style="font-size: 20px;">© Todos los derechos reservados</p></b>
+   <b> <p class="text-center text" style="font-size: 20px;">© Todos los derechos reservados</p></b>
 <br>
 </section>
