--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -21,19 +21,19 @@
                             <div>EXPANDIR</div>
                             <div>CRECER</div>
                             <div>INNOVAR</div>
+                            <div>BRILLAR</div>
                         </div> <br>
                         TU MARCA COMO <br> NUNCA ANTES? <br> <br>
                         <div class="text-center">
                             <button class="btn-form text-center"> ¡Hagámoslo!</button>
                         </div>
-
-                       
                     </div>
                 
                 </div>
                 </div>
 
                 <div class="column">
+                    
                         <div class=" max-logo">   
                         <img src="./assets/img/Onspace_wave.png" class="img-fluid"
                             alt="Onspace">
