--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -25,7 +25,7 @@
                         </div> <br>
                         TU MARCA COMO <br> NUNCA ANTES? <br> <br>
                         <div class="text-center">
-                            <button class="btn-form text-center"> ¡Hagámoslo!</button>
+                            <button class="btn-form text-center" routerLink="/form"> ¡Hagámoslo!</button>
                         </div>
                     </div>
                 
