--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -57,9 +57,10 @@
 .caption {
    line-height: 80px;
    font-size: 60px;
+   font-weight: 1000;
    color: #E8E7E7;
    position: absolute;
-   font-family: 'Arquitecta Black';
+   font-family: 'Arquitecta';
 
    @media (max-width: 550px) {
          flex-flow: column wrap;
@@ -73,7 +74,7 @@
 .text-box {
    display: inline-block;
    position: relative;
-   font-weight: 900;
+   font-weight: 1000;
    font-family: 'Montserrat';
    color: #FCBD07;
 }
@@ -178,8 +179,7 @@
 
 .btn-form{
    border-radius: 25px;
-   border-color: #E8E7E7;
-   box-shadow: 10px 5px 5px #E8E7E7;
+   border: none;
    background-color: #FCBD07;
    color: #1D95D3;
    font-weight: 900;
