--- a/src/app/Shared/header/header.component.html
+++ b/src/app/Shared/header/header.component.html
@@ -3,15 +3,15 @@
 
    
 
-        <div class="row justify-content-center">
+        <header >
             
             
             <nav class="text-center">
                 <br>
-                <a class="nav-item" href="/home">Home</a> 
-                <a class="nav-item" href="/team">Team</a>
-                <a class="nav-item" href="/portafolio">Portafolio</a>
-                <a class="nav-item" href="/contact">Contact</a>
+                <a href="/home">Home</a> 
+                <a href="/team">Team</a>
+                <a href="/portafolio">Portafolio</a>
+                <a href="/contact">Contact</a>
                 
             </nav>
                     <div class="container">
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                     </div>
-        </div>
+        </header>
 
 
 
