--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -52,14 +52,25 @@
 .slider {
    height: 400px;
    position: relative;
+   @media (max-width: 980px) {
+         flex-flow: column wrap;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         margin: auto;
+   
+      }
+
+
 }
 
 .caption {
+   position: absolute;
+   // display: flex;
    line-height: 80px;
    font-size: 60px;
    font-weight: 1000;
    color: #E8E7E7;
-   position: absolute;
    font-family: 'Arquitecta';
 
    @media (max-width: 550px) {
@@ -67,6 +78,7 @@
          line-height: 70px;
          font-size: 35px;
          justify-content: center;
+         margin: auto;
    
       }
 }
@@ -74,6 +86,9 @@
 .text-box {
    display: inline-block;
    position: relative;
+   // background-color: blue !important;
+   // z-index: 999999;
+   bottom: -10px;
    font-weight: 1000;
    font-family: 'Montserrat';
    color: #FCBD07;
