Update Home text

--- a/src/app/features/page/Home/home/home.component.html
+++ b/src/app/features/page/Home/home/home.component.html
@@ -9,31 +9,30 @@
 
 <section class="home-section">
     <br>
-        <div class="wrapper-columns">
+       
         
-            <div class="columns">
+            <div class="columns container m-auto bg-danger justify-content-around">
         
-                <div class="column">
-                <div class="slider">
-                    <div class="caption">
-                        ¿LISTO PA'
+                <div class="column text-center bg-warning d-flex justify-content-center">
+                
+                    <div class="caption text-center bg-primary m-auto">
+                        ¿LISTO PA' <br>
                         <div class="text-box">
                             <div>EXPANDIR</div>
-                            <div>CRECER</div>
-                            <div>INNOVAR</div>
+                            <div>DESPEGAR</div>
+                            <div>MODERNIZAR</div>
                         </div> <br>
-                        TU MARCA COMO <br> NUNCA ANTES? <br> <br>
+                        TU MARCA<br> <br>
                         <div class="text-center">
                             <button class="btn-form text-center" routerLink="/form"> ¡Hagámoslo!</button>
                         </div>
                     </div>
-                
-                </div>
+            
                 </div>
 
-                <div class="column">
+                <div class="column bg-primary">
                     
-                        <div class=" max-logo">   
+                        <div class=" max-logo ">   
                         <img src="./assets/img/Onspace_wave.png" class="img-fluid"
                             alt="Onspace">
                             </div>
@@ -41,7 +40,7 @@
         
             </div>
         
-        </div>
+        
 <br>
         <div class="container">
             <div class="waves">       
