--- a/src/app/features/page/Home/home/home.component.scss
+++ b/src/app/features/page/Home/home/home.component.scss
@@ -1,6 +1,9 @@
  
  *{
-    font-family: "Arquitecta", sans-serif;
+   font-family: "Arquitecta", sans-serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 
  }
 
@@ -50,23 +53,22 @@
 }
 
 .slider {
-   height: 400px;
-   position: relative;
-   @media (max-width: 980px) {
-         flex-flow: column wrap;
-         display: flex;
-         align-items: center;
-         justify-content: center;
-         margin: auto;
+   // height: 400px;
+   // position: relative;
+   // @media (max-width: 980px) {
+   //       flex-flow: column wrap;
+   //       display: flex;
+   //       align-items: center;
+   //       justify-content: center;
+   //       margin: auto;
    
-      }
+   //    }
 
 
 }
 
 .caption {
    position: absolute;
-   // display: flex;
    line-height: 80px;
    font-size: 60px;
    font-weight: 1000;
@@ -84,14 +86,22 @@
 }
 
 .text-box {
-   display: inline-block;
+   display: flex;
+   justify-content: center;
    position: relative;
-   // background-color: blue !important;
-   // z-index: 999999;
-   bottom: -10px;
+   background-color: blue !important;
+   top: 70px;
    font-weight: 1000;
    font-family: 'Montserrat';
    color: #FCBD07;
+
+   @media(max-width: 550px){
+      flex-flow: column wrap;
+      justify-content: center;
+
+   }
+
+
 }
 
 .text-box div {
@@ -205,7 +215,6 @@
          flex-flow: column wrap;
          font-size: 45px;
          justify-content: center;
-         margin-left: 50px;
    
       }
 }
@@ -213,19 +222,30 @@
 //Columns
 
 
-.wrapper-columns {
-   padding: 5px;
-   max-width: 1250px;
-   width: 95%;
-   margin: 20px auto;
-}
+// .wrapper-columns {
+//    padding: 5px;
+//    max-width: 1000px;
+//    width: 95%;
+//    margin: 20px auto;
+// }
 
 
 .columns {
+   // padding: 5px;
+   // max-width: 1000px;
+   // width: 95%;
+   // margin: 20px auto;
+   // display: flex;
+   // flex-flow: row wrap;
+   // justify-content: space-between;
+   // margin: 5px 0;
    display: flex;
-   flex-flow: row wrap;
-   justify-content: space-between;
-   margin: 5px 0;
+
+   @media(max-width:550px){
+      // flex-flow: column wrap;
+      flex-direction: column;
+
+   }
 }
 
 .column {
